--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "es6-next-prototyping-client",
-  "version": "1.0.1",
-  "description": "ESNext client prototyping boilerplate",
-  "main": "dist/main.js",
+  "name": "electron-rpi-prototyping-boilerplate",
+  "version": "1.0.0",
+  "description": "Electron - Raspberry Pi prototyping boilerplate",
+  "main": "src/main.js",
   "author": "Benjamin Matuszewski",
   "license": "ISC",
   "scripts": {
-    "bundle": "./bin/runner --bundle",
-    "transpile": "./bin/runner --transpile",
-    "prewatch": "npm run transpile",
-    "watch": "./bin/runner --watch",
-    "serve": "./bin/runner --serve",
-
-    "postinstall": "npm run bundle"
+    "deploy": "./bin/runner --deploy",
+    "start": "./node_modules/nodemon/bin/nodemon.js --ignore node_modules --exec \"xvfb-run -a electron ./src/main.js\"",
+    "watch-src": "./bin/runner --watch-src",
+    "watch-dist": "./bin/runner --watch-dist"
   },
   "dependencies": {
-    "babel-runtime": "^6.9.2"
+    "nodemon": "^1.11.0",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-latest": "^6.14.0",
-    "benchmark": "^1.0.0",
-    "browserify": "^13.0.0",
     "colors": "^1.1.2",
-    "connect": "^3.3.5",
-    "fs-extra": "^0.26.5",
-    "ora": "^0.2.0",
-    "portfinder": "^0.4.0",
-    "serve-favicon": "^2.2.0",
-    "serve-static": "^1.9.2",
-    "watch": "^0.17.1"
+    "electron": "^1.6.6",
+    "fs-extra": "^3.0.0",
+    "klaw": "^1.3.1",
+    "scp2": "^0.5.0",
+    "to-ssh": "^0.5.1",
+    "watch": "^1.0.2"
   }
 }
